--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vishal Bhargava</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div id="topContainer">
+        Hello World
+    </div>
+
+
+    <div id="bottomContainer">
+        <div class="firstDiv">
+            div1
+        </div>
+        <div class="secondDiv">
+            div2
+        </div>
+    </div>
+</body>
+</html>
