outline of portfolio made

--- a/index.html
+++ b/index.html
@@ -8,18 +8,47 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="topContainer">
-        Hello World
-    </div>
-
-
-    <div id="bottomContainer">
-        <div class="firstDiv">
-            div1
+     <!-- HEADER SECTION  -->
+   <header>
+    <div class="header">
+        <div class="logo">
+            <a href="#">
+                <img src="#" alt="logo">
+            </a>
         </div>
-        <div class="secondDiv">
-            div2
+        <div class="navbar">
+            <ul>
+                <li><a href="#"></a>Projects</li>
+                <li><a href="#"></a>About</li>
+                <li><a href="#"></a>Contact</li>
+            </ul>
         </div>
     </div>
+   </header>
+
+   <!-- Landing page section -->
+    <section class="landing">   
+
+    </section>
+
+    <!-- Projects Section -->
+    <section class="projects">
+
+    </section>
+
+    <!-- TECH-STACK Section -->
+    <section class="techstack">
+
+    </section>
+
+    <!-- About Section -->
+    <section class="about">
+
+    </section>
+
+    <!-- FOOTER SECTION -->
+    <footer>
+
+    </footer>
 </body>
 </html>
