made landing page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="logo">
             <a href="#">
-                <img src="#" alt="logo">
+                <img src="./Resources/name.svg" alt="logo">
             </a>
         </div>
         <div class="navbar">
@@ -28,7 +28,11 @@
 
    <!-- Landing page section -->
     <section class="landing">   
-
+        <h1>
+            VISHAL BHARGAVA
+        </h1>
+        <span>...</span>
+        <p>Full Stack Web Developer</p>
     </section>
 
     <!-- Projects Section -->
@@ -43,7 +47,11 @@
 
     <!-- About Section -->
     <section class="about">
-
+        <div class="about_img">
+            <img class="dp" src="./Resources/profile-pic.png" alt="profilePic">
+            <h1>ABOUT</h1>
+            <p>This and That</p>
+        </div>
     </section>
 
     <!-- FOOTER SECTION -->
