about me section added

--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
     <!-- About Section -->
     <section class="about">
         <div class="about_img">
+            <h1>ABOUT ME</h1>
             <img class="dp" src="./Resources/profile-pic.png" alt="profilePic">
-            <h1>ABOUT</h1>
-            <p>This and That</p>
+            <p>
+                An enthusiastic Full Stack Web Developer with a strong set of technical as well as non-technical skills and a dedication towards creating useful and interactive web applications.
+            </p>
         </div>
     </section>
 
