contact me added

--- a/index.html
+++ b/index.html
@@ -123,6 +123,22 @@
         </div>
     </section>
 
+    <section class="contactMe">
+        <div class="contact">
+            <h1>CONTACT</h1> 
+            <p>Say Hi</p>
+
+            <form class="form" action="https://formsubmit.co/12b6926e2c58985b1436d6ad5f83ae9a" method="POST">
+                <input type="text" placeholder="What's your name?" class="name" name="name">
+                <input type="email" name="email" placeholder="Your Email Address"
+                class="email" required>
+                <textarea name="textarea" class="textarea" rows="10" placeholder="Brevity is the soul of wit..."></textarea>
+                <input type="submit" value="TALK TO ME" name="submit">
+            </form>
+        </div>
+
+    </section>
+
     <!-- FOOTER SECTION -->
     <footer>
 
