--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vishal Bhargava</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -40,6 +41,25 @@
         <h1>
             PROJECTS
         </h1>
+        <div class="project">
+            <div class="soloProject">
+                <div> <img src="./Resources/Projects/modesens.png" alt=""></div>
+                <div class="details">
+                    <h2>Modesens-Clone</h2>
+                    <p>An E-com website where you can buy the latest fashion trends. Website is made with HTML, CSS and vanilla JS.</p>
+                   <a href="https://github.com/sadhakvishu/Slytherin/tree/main/LINKING" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-3x"></i></a> 
+                </div>
+            </div>
+            <div class="soloProject">
+                <div> <img src="./Resources/Projects/hellobrightline.png" alt=""></div>
+                <div class="details">
+                    <h2>HelloBrightLine-Clone</h2>
+                    <p>A goal of making the lives better of children and teens in the world. We do consultancy services throughout the world.</p>
+                   <a href="https://github.com/sadhakvishu/material-road-6006" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-3x"></i></a> 
+                </div>
+            </div>
+         
+        </div>
     </section>
 
     <!-- TECH-STACK Section -->
