github and linked links added.

--- a/index.html
+++ b/index.html
@@ -160,8 +160,19 @@
     </section>
 
     <!-- FOOTER SECTION -->
-    <footer>
+    <footer class="footerSection"> 
+        <div class="footer">
+            <!-- <div class="left"> -->
+                <!-- <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a> 
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa fa-phone fa-3x" aria-hidden="true"></i></a>  -->
+            <!-- </div> -->
 
+            <div class="right">
+                <a href="https://github.com/sadhakvishu" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-3x"></i></a> 
+                <a href="https://www.linkedin.com/in/sadhakvishu/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin fa-3x"></i></a> 
+
+            </div>
+        </div>
     </footer>
 </body>
 </html>
