deployed button added

--- a/index.html
+++ b/index.html
@@ -46,16 +46,20 @@
                 <div> <img src="./Resources/Projects/modesens.png" alt=""></div>
                 <div class="details">
                     <h2>Modesens-Clone</h2>
+                    <a href="https://sadhakvishu.github.io/Slytherin/" target="_blank" rel="noopener noreferrer"><i class="fa fa-link fa-2x" aria-hidden="true"></i></a> 
                     <p>An E-com website where you can buy the latest fashion trends. Website is made with HTML, CSS and vanilla JS.</p>
-                   <a href="https://github.com/sadhakvishu/Slytherin/tree/main/LINKING" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-3x"></i></a> 
+                   <a href="https://github.com/sadhakvishu/Slytherin/tree/main/LINKING" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-3x"></i></a>
+                   <h4 class="technology"> TECH STACK : HTML5, CSS3, Vanilla JS</h4> 
                 </div>
             </div>
             <div class="soloProject">
                 <div> <img src="./Resources/Projects/hellobrightline.png" alt=""></div>
                 <div class="details">
                     <h2>HelloBrightLine-Clone</h2>
+                    <a href="https://sadhakvishu.github.io/material-road-6006/" target="_blank" rel="noopener noreferrer"><i class="fa fa-link fa-2x" aria-hidden="true"></i></a>
                     <p>A goal of making the lives better of children and teens in the world. We do consultancy services throughout the world.</p>
                    <a href="https://github.com/sadhakvishu/material-road-6006" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-3x"></i></a> 
+                   <h4 class="technology"> TECH STACK : HTML5, CSS3, Vanilla JS</h4> 
                 </div>
             </div>
          
