github calender added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="#"></a>Projects</li>
                 <li><a href="#"></a>About</li>
                 <li><a href="#"></a>Contact</li>
+                <li><a href="#"></a>Resume</li>
             </ul>
         </div>
     </div>
