--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#"></a>Projects</li>
                 <li><a href="#"></a>About</li>
                 <li><a href="#"></a>Contact</li>
-                <li><a href="./Resources/Vishal-Bhargava-Resume.pdf" download="Vishal-Bhargava-Resume"></a>Resume</li>
+                <li><a href="./Resources/Vishal-Bhargava-Resume.pdf" download="Vishal-Bhargava-Resume">Resume</a></li>
             </ul>
         </div>
     </div>
