--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
    <header>
     <div class="header">
         <div class="logo">
-            <a href="#">
+            <a href="#landing">
                 <img src="./Resources/name.svg" alt="logo">
             </a>
         </div>
         <div class="navbar">
             <ul>
-                <li><a href="#"></a>Projects</li>
-                <li><a href="#"></a>About</li>
-                <li><a href="#"></a>Contact</li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="./Resources/Vishal-Bhargava-Resume.pdf" download="Vishal-Bhargava-Resume">Resume</a></li>
             </ul>
         </div>
@@ -32,7 +32,7 @@
    </header>
 
    <!-- Landing page section -->
-    <section class="landing">   
+    <section id="landing" class="landing">   
         <h1>
             VISHAL BHARGAVA
         </h1>
@@ -41,7 +41,7 @@
     </section>
 
     <!-- Projects Section -->
-    <section class="projects">
+    <section id="projects" class="projects">
         <h1>
             PROJECTS
         </h1>
@@ -142,7 +142,7 @@
 
     
     <!-- About Section -->
-    <section class="about">
+    <section id="about" class="about">
         <div class="about_img">
             <h1>ABOUT ME</h1>
             <img class="dp" src="./Resources/profile-pic.png" alt="profilePic">
@@ -210,7 +210,7 @@
 </div>
 
 
-    <section class="contactMe">
+    <section id="contact" class="contactMe">
         <div class="contact">
             <h1>CONTACT</h1> 
             <p>Say Hi</p>
