--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#" download="Vishal-Bhargava-Resume">Resume</a></li>
+                <li><a href="#">Resume</a></li>
             </ul>
         </div>
     </div>
