--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vishal Bhargava</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css">
     <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
     <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"/>
+    
 </head>
 <body>
      <!-- HEADER SECTION  -->
@@ -30,6 +34,27 @@
         </div>
     </div>
    </header>
+
+
+   <!-- <nav class="navbar">
+    <div class="max-width">
+        <div class="logo"><a href="index.html">Vishal <span>Bhargava</span></a></div>
+        <ul class="menu">
+            <li><a href="#home" class="menu-btn">Home</a></li>
+            <li><a href="#about" class="menu-btn">About</a></li>
+            <li><a href="#skills" class="menu-btn">Skills</a></li>
+            <li><a href="#proficiencies" class="menu-btn"> Proficiency</a></li>
+            <li><a href="#project" class="menu-btn">Projects</a></li>
+            <li><a href="#statistics" class="menu-btn"> Statistics</a></li>
+            <li><a href="#contact" class="menu-btn">Contact</a></li>
+            <li><a class="resumeDow" href="#" class="menu-btn" class="btn btn-success" download="Vishal-Bhargava-Resume"> Resume</a></li>
+
+        </ul>
+        <div class="menu-btn">
+            <i class="fas fa-bars"></i>
+        </div>
+    </div>
+</nav> -->
 
    <!-- Landing page section -->
     <section id="landing" class="landing">   
@@ -147,7 +172,11 @@
             <h1>ABOUT ME</h1>
             <img class="dp" src="./Resources/profile-pic.png" alt="profilePic">
             <p>
-                An enthusiastic Full Stack Web Developer with a strong set of technical as well as non-technical skills and a dedication towards creating useful and interactive web applications.
+                An aspiring full-stack web developer who is an avid learner and solution seeker. Able
+to work on front and back end as required and demonstrates excellent teamwork
+skills. Proficient in JAVA, Spring Boot, and JavaScript with multiple project
+experiences. Passionate about coding, solving problems, and collaborating on
+different projects.
             </p>
         </div>
     </section>
@@ -229,7 +258,7 @@
 <!-- start count stats -->
 <!-- start count stats -->
 
-<section id="counter-stats" class="wow fadeInRight" data-wow-duration="1.4s">
+<!-- <section id="counter-stats" class="wow fadeInRight" data-wow-duration="1.4s">
 	<div class="container">
 		<div class="row">
 
@@ -263,7 +292,7 @@
 	</div>
 	<!-- end container -->
 
-</section>
+</section> 
 
 <!-- end cont stats -->
 
@@ -323,7 +352,7 @@
 </body>
 
 <script >
-GitHubCalendar(".calendar", "sadhakvishu", { responsive: true,global_stats:false,tooltips: true});
+GitHubCalendar(".calendar", "sadhakvishu", { responsive: true,global_stats:true,tooltips: true});
 
 // number count for stats, using jQuery animate
 // number count for stats, using jQuery animate
