--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
                    <h4 class="technology"> TECH STACK : HTML5, CSS3, Vanilla JS</h4> 
                 </div>
             </div>
+            <div class="soloProject">
+                <div> <img src="./Resources/Projects/hellobrightline.png" alt=""></div>
+                <div class="details">
+                    <h2>Online Trip Management System</h2>
+                    <a href="https://drive.google.com/file/d/1t8q-Hg8N54gR19RKfNmvQRAx0Wpb2mL0/view?usp=sharing" target="_blank" rel="noopener noreferrer"><i class="fa fa-link fa-2x" aria-hidden="true"></i></a>
+                    <p>A web service provoding all details regarding tour and travel in India. It brings the Travel Industry and Customers at a single place.</p>
+                   <a href="https://github.com/akash-github-25/tangible-station-4401" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-3x"></i></a> 
+                   <h4 class="technology"> TECH STACK : SpringBoot, Java, Hibernate</h4> 
+                </div>
+            </div>
          
         </div>
     </section>
