--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="soloProject">
-                <div> <img src="./Resources/Projects/hellobrightline.png" alt=""></div>
+                <div> <img src="./Resources/Projects/Trip Management.png" alt=""></div>
                 <div class="details">
                     <h2>Online Trip Management System</h2>
                     <a href="https://drive.google.com/file/d/1t8q-Hg8N54gR19RKfNmvQRAx0Wpb2mL0/view?usp=sharing" target="_blank" rel="noopener noreferrer"><i class="fa fa-link fa-2x" aria-hidden="true"></i></a>
