--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         </div>
         <div class="navbar">
             <ul>
+                <li><a href="#landing">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#techstack">Skills</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#">Resume</a></li>
@@ -191,7 +193,7 @@ different projects.
         </div>
     </section>
     
-    <section class="techstack">
+    <section id="techstack" class="techstack">
 
         <h1> My Tool-Kit</h1>
 
