--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#techstack">Skills</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#">Resume</a></li>
+                <li><a href="./Resources/Projects/Vishal-Bhargava-Resume.pdf" download="Vishal-Bhargava-Resume">Resume</a></li>
             </ul>
         </div>
     </div>
