--- a/index.html
+++ b/index.html
@@ -234,19 +234,17 @@ different projects.
             
         </div>
 </div>
-<div style="display: flex; align-items: center; justify-content: center;">
+<div class="githubStats" style="display: flex; align-items: center; justify-content: center; width: 100%;">
 
+    <div style="width: 50%;">
+        <img style="width: 100%;"  src="https://github-readme-stats.vercel.app/api?username=sadhakvishu&show_icons=true&theme=blue-green&count_private=true&include_all_commits=true&border_color=FFFFFF&text_color=09d672&icon_color=00C2C2&title_color=00F1E9&custom_title=My%20Github%20Stats" alt="sadhakvishu" />
 
-    <!-- <img  src="https://github-readme-stats.vercel.app/api/top-langs?username=sadhakvishu&show_icons=true&theme=blue-green&border_color=FFFFFF&layout=compact" alt="sadhakvishu" /> -->
-    <img  src="https://github-readme-stats.vercel.app/api?username=sadhakvishu&show_icons=true&theme=blue-green&count_private=true&include_all_commits=true&border_color=FFFFFF&text_color=09d672&icon_color=00C2C2&title_color=00F1E9&custom_title=My%20Github%20Stats" alt="sadhakvishu" />
-    
-    <!-- ![My GitHub Stats](https://github-readme-stats.vercel.app/api?username=sadhakvishu&show_icons=true&theme=blue-green&count_private=true&include_all_commits=true&border_color=FFFFFF&text_color=09d672&icon_color=00C2C2&title_color=00F1E9&custom_title=My%20Stats)
-     -->
-    <!-- <div >
-      <div style="display: flex; align-items: flex-start;"> -->
-        <img src="https://github-readme-streak-stats.herokuapp.com?user=sadhakvishu&theme=blue-green" />
-      <!-- </div>
-    </div> -->
+    </div>
+    <div style="width: 50%;">
+
+        <img style="width:100%;" src="https://github-readme-streak-stats.herokuapp.com?user=sadhakvishu&theme=blue-green" />
+    </div>
+
 </div>
     <section id="contact" class="contactMe">
         <div class="contact">
