profile pic updated

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section id="about" class="about">
         <div class="about_img">
             <h1>ABOUT ME</h1>
-            <img class="dp" src="./Resources/profile-pic.png" alt="profilePic">
+            <img class="dp" src="./Resources/pic.jpg" alt="profilePic">
             <p>
                 An aspiring full-stack web developer who is an avid learner and solution seeker. Able
 to work on front and back end as required and demonstrates excellent teamwork
